--- a/1.Week-1/Day-2/basics.css
+++ b/1.Week-1/Day-2/basics.css
@@ -18,3 +18,19 @@
         margin-top: 50px;
         padding: 20px;
     }
+
+   
+
+    table {
+        border: 2px solid black;
+        border-collapse: collapse;
+        width: 60%;
+    
+    }
+    
+    th, td {
+        border: 1px solid black;
+        padding: 10px;
+        text-align: center;
+    }
+    
